Fix server list text overflow

--- a/app/assets/stylesheets/context.scss
+++ b/app/assets/stylesheets/context.scss
@@ -12,13 +12,17 @@
     width: 100%;
     height: 32px;
     color: $dk-icons;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    max-width: 100%;
+    @include flex(row, space-between, center);
+    @include text-overflow;
     padding: 10px;
     border-radius: 3px;
     cursor: pointer;
+
+    span {
+      @include text-overflow;
+      line-height: 1.1;
+    }
 
     font: {
       family: "Whitney Medium";
