--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -708,7 +708,7 @@ button.disabled {
     .close-dm {
       display: none;
       position: absolute;
-      right: 18.75px;
+      right: 10px;
     }
 
     &:hover {
